# real-time-data-processing-class

./: .gitignore  README.md  SYLLABUS.md  WEBSITE_BRIEF.md  lesson-06-teaching-notes.md  slides copy.html  slides.html
src-lesson1/: README.md  docker-compose.yml  experiment_batch.py  experiment_hotrow.py  experiment_parallel_copy.py  init.sql  instrument.sql  load_async.py  load_naive.py  pyproject.toml  reset.sh  run_all.py
src-lesson1/demos/: demo_buffers.py  demo_connections.py  demo_locks.py  demo_oom.py  demo_sync_loss.py  demo_vacuum.py  demo_work_mem.py
src-lesson9/: AGENTS.md  README.md  docker-compose.flink-cluster.yml  docker-compose.yml  pyproject.toml
src-lesson9/ckpt-trig/spark/: .metadata.crc  metadata
src-lesson9/ckpt-trig/spark/commits/: .1.crc  .10.crc  .11.crc  .12.crc  .13.crc  .2.crc  .3.crc  .4.crc  .5.crc  .6.crc  .7.crc  .8.crc  .9.crc  1  10  11  12  14  2  3  4  5  6  7  8  9
src-lesson9/ckpt-trig/spark/offsets/: .0.crc  .1.crc  .10.crc  .11.crc  .12.crc  .13.crc  .14.crc  .2.crc  .3.crc  .4.crc  .5.crc  .6.crc  .7.crc  .8.crc  .9.crc  0  1  10  11  12  13  14  2  3  4  5  6  7  8  9
src-lesson9/ckpt-trig/spark/sources/0/: .0.crc  0
src-lesson9/ckpt-trig/spark/state/0/0/: .11.delta.crc  .13.delta.crc  .3.delta.crc  .5.delta.crc  11.delta  13.delta  (+2 more)
src-lesson9/src/: analyze_latency.py  benchmark.py  config.py  demo_idle_source_stall.py  demo_trigger_floor.py  demo_watermark_bound.py  flink_pipeline.py  producer.py  setup_flink_venv.py  setup_topics.py  spark_pipeline.py  throughput_sweep.py  trigger_sweep.py  trigger_sweep_extend.py
(+133 files in other folders)
