[project]
name = "lesson9-latency-benchmark"
version = "0.1.0"
description = "Lesson 9: Micro-batch vs true streaming — Spark Structured Streaming vs PyFlink latency benchmark"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pyspark==4.0.1",
    "confluent-kafka>=2.6.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]
